--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body>
 
     <p>Dit is test</p>
-    <p>loremipsum1sdkfnaskljdfaskjdflkasjflakj</p>
-    <P>asd</P>
+    <p>Phillip</p>
+    <P>cruz</P>
     <P>asd</P>
 
 </body>
